# usb_dfu_bootloader_module

./: CORE_MODULE.json  README.md
include/: board.h  dfu.h  halconf.h  hw_utils.hpp  mcuconf.h  nilconf.h  usbcfg.h
scripts/: run_at_usb_bootloader_connect.sh
src/: board.c  dfu.c  hw_utils.cpp  usbcfg.c
target_template/: CMakeLists.txt  GITRevisionTemplate.cpp.in  MODULE_TARGET.json  main.cpp
