# TARGET MODULE usb_dfu_bootloader

PROJECT( usb_dfu_bootloader )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( CORE_BUILD CONFIG REQUIRED )

INCLUDE ( NILTarget NO_POLICY_SCOPE )

SET( USE_SPECS "nano.specs")

SET( BOOTLOADER_SIZE 16384 )
SET( CONFIGURATION_SIZE 2048 )
SET( TAGS_SIZE 256 )

SET( PROJECT_INCLUDE_DIRECTORIES
)

SET( PROJECT_SOURCES
  main.cpp
)

nil_target_module(
  IS_BOOTLOADER
  MODULE usb_dfu_bootloader
  OS_VERSION CHIBIOS_16
)
 
